# magic_mirror_cpp

./: CMakeLists.txt  README.md
src/: CurrentWeather.cpp  CurrentWeather.h  CurrentWeatherPanel.cpp  CurrentWeatherPanel.h  Mirror.cpp  MirrorApp.cpp  MirrorApp.h  MirrorFrame.cpp  MirrorFrame.h  TimeDate.cpp  TimeDate.h  TimeDatePanel.cpp  TimeDatePanel.h  mirror.cpp  mirror.h  time_panel.h
